--- a/adaptTerrariaWiki/adaptTerrariaWiki/Pages/Index.razor
+++ b/adaptTerrariaWiki/adaptTerrariaWiki/Pages/Index.razor
@@ -1,7 +1,11 @@
 ﻿@page "/"
+@{
+    var scrImages = "";
+}
 
-<h1>Hello, Terraria gamer</h1>
+<h1>Hello Terraria gamer</h1>
 
 Welcome to your new wiki.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<img src="" />
+<Counter IncrementAmount="10"/>
